# gib

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  checkstyle.xml  pom.xml
.build/: Dockerfile  README.md  build.sh  container-alive-command.sh  container-command.sh
.docker/: bash-entrypoint.sh  gib-entrypoint.sh
.docs/: github-pipeline-example.md
.github/workflows/: publish-binary.yaml  publish-docker.yaml  test-merge-request.yaml  update-version-changelog.yaml
src/: args.rs  conventional.rs  git.rs  main.rs  semantic.rs  version.rs
src/command/: version.rs
src/commands/: changelog.rs  mod.rs  version.rs
src/main/java/io/github/coenraadhuman/gib/: Application.java
src/main/java/io/github/coenraadhuman/gib/cli/: ArgumentProcessor.java  ArgumentRunner.java
src/main/java/io/github/coenraadhuman/gib/cli/argument/: AbstractArgument.java  VersionArgument.java  VersionCommandArgument.java
src/main/java/io/github/coenraadhuman/gib/cli/command/: VersionCommand.java
src/main/java/io/github/coenraadhuman/gib/cli/enums/: CommandType.java
src/main/java/io/github/coenraadhuman/gib/cli/exception/: ArgumentException.java
src/main/java/io/github/coenraadhuman/gib/command/: Changelog.java  CommandExecutor.java  Version.java
src/main/java/io/github/coenraadhuman/gib/domain/: DomainFactory.java
src/main/java/io/github/coenraadhuman/gib/git/: GitHelper.java  GitHelperImpl.java
src/main/resources/: application.yaml
src/tests/: conventional_tests.rs  mod.rs  semantic_tests.rs  version_tests.rs
(+63 files in other folders)
