[package]
name = "gib"
version = "1.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
git2 = { version = "0.18.3" }
fancy-regex = { version = "0.13.0" }

openssl = { version = "0.10.64", features = ["vendored"] }
libz-sys = { version = "1.1.16" }
lazy_static = "1.4.0"
Inflector = "0.11.4"
